<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <EditText
        android:id="@+id/lbl_play_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType=""
        android:text="@string/game_type_title"
        android:editable="false"
        android:layout_marginTop="50dp"/>

    <RadioGroup
        android:id="@+id/radioGroup_game_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButton_OnePlayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/one_player" />

        <RadioButton
            android:id="@+id/radioButton_TwoPlayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/two_player" />

    </RadioGroup>

    <EditText
        android:id="@+id/lbl_game_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:editable="false"
        android:ems="10"
        android:text="@string/game_level_title" />

    <RadioGroup
        android:id="@+id/radioGroup_game_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/radioButton_game_level_beginner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/game_level_beginner"/>
        <RadioButton
            android:id="@+id/radioButton_game_level_easy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/game_level_easy"/>

        <RadioButton
            android:id="@+id/radioButton_game_level_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_level_normal"/>

        <RadioButton
            android:id="@+id/radioButton_game_level_hard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_level_hard"/>
    </RadioGroup>
<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button
        android:id="@+id/button_Ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btnOK_click"
        android:text="@string/ok"
        android:layout_margin="50dp"/>
    <Button
        android:id="@+id/button_Report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btnReport_click"
        android:text="@string/game_reports"
        android:layout_marginTop="50dp"/>
</androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>